--- a/CSS/style.css
+++ b/CSS/style.css
@@ -43,25 +43,54 @@ h4{
     text-align: center;
     margin: 10px;
   }
+
  /* navbar*/
 
  .mi-navbar {
   background-color: #f8f8f8;
   display: flex;
-  justify-content: center;}
+  justify-content: center;
+  align-items: center;
+  padding: 10px 20px;
+  margin: 15px;
+ }
 
-  .mi-navbar ul :hover{
-    list-style: none;
-    font-family: 'Times New Roman', Times, serif;
-    display: flex;
-    justify-content: center;
-    box-shadow: #2B2B2B;
-    transform: scale(1.1);
-    
-  }
+  /* logo */
+ .logo {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+ }
 
+ .logo img {
+  height: 200px;
+  width: auto;
+  object-fit: cover;
+  border-radius: 50%;
+}
 
+/* nav links */
+.nav-link {
+  margin-left: 15px;
+  font-weight: 500;
+  text-shadow: 0px 1px 8px #615C56 ;
+}
 
+.nav-link:hover{
+  color: #88744a;
+  transform: scale(1.1);
+}
+
+.navbar-toggler {
+  border: none;
+}
+
+.navbar-toggler:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px #B6954E;
+}
+
+/* main  index */
 main h2{
   margin-top: 10px;
   font-size: 20px ;
