ajustes de menu

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -105,8 +105,13 @@ main p {
   font-size: 20px;
   font-family: 'Courier New', Courier, monospace;
   margin: 20px;
+
 }
-/* promo menú */
+
+
+
+
+/* promo del inicio */
 
 #promo {
   margin: 30px auto;
