--- a/CSS/style.css
+++ b/CSS/style.css
@@ -234,7 +234,8 @@ footer img {
 
 /* mq desktop para index  y tienda*/
 @media (min-width: 1024px) {
- /* index  */
+
+  /* index  */
   .promo {
     flex-direction: row;
   }
@@ -259,6 +260,7 @@ footer img {
     width: 5%;
     height: 5%;
   }
+
   /* tienda  */
 
   .container {
@@ -266,21 +268,9 @@ footer img {
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 30px;
     padding: 30px;
-    
-    margin: 0 auto;;
+    margin: 0 auto;
+    ;
   }
-  .item {
-   
-    
-
-
-
-
-
-
-
-
-
 
 }
 
@@ -294,14 +284,14 @@ footer img {
 }
 
 .item {
-  
+
   border: 1px solid #ccc;
   border-radius: 12px;
   padding: 15px;
   text-align: center;
   background-color: #D3D0C9;
   box-shadow: 0 0px 8px rgba(0, 0, 0, 0.2);
-  
+
 }
 
 .item img {
