--- a/CSS/style.css
+++ b/CSS/style.css
@@ -272,6 +272,7 @@ footer img {
     ;
   }
 
+  
 }
 
 
@@ -331,7 +332,10 @@ div h3 {
 
 
 #spotify {
-  margin: 20px
+  margin: 20px;
+  padding: 20px;
+  text-align: center;
+
 }
 
 #spotify img {
@@ -339,40 +343,113 @@ div h3 {
   height: auto;
 }
 
-/* albumes eras */
-.izquierda {
-  text-align: center;
-  width: 20%;
-  padding: 10px;
-  box-shadow: 0 0px 8px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-  word-spacing: 5px;
-
-}
-
-.izquierda ol {
-  list-style: none;
-
-}
-
-.izquierda li {
+.laseras {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  padding: 20px;
+  gap: 20px;
+  width: 100%;
   margin-bottom: 10 px;
 }
 
-.img-discos {
+.izquierda .derecha {
+  width: 50%;
+  padding: 10px;
+
+}
+
+/* albumes eras */
+.izquierda {
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 250px;
+  max-height: 475px;
+  background-color: #2B2B2B;
+  overflow-y: auto;
+  border-radius: 10px;
+  box-shadow: 0 0px 8px rgba(0, 0, 0, 0.2);
+}
+
+.izquierda ol {
+  list-style: circle;
+
+}
+
+.izquierda ol li {
+  padding: 10px;
+  line-height: 1.4;
+  font-size: 20px;
+}
+
+.izquierda ol li:hover {
+  background-color: #B6954E;
+  border-radius: 10px;
+  box-shadow: 0 0px 8px rgba(0, 0, 0, 0.2);
+}
+
+
+
+.izquierda a {
+  align-items: center;
+  text-align: center;
+  text-decoration: none;
+  color: #F8F8F8;
+  font-size: 20px;
+  font-weight: bolder;
+  text-shadow: #2B2B2B 0px 0px 2px;
+
+}
+
+.derecha img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 0px 8px rgba(0, 0, 0, 0.2);
+  object-fit: cover;
+
+}
+
+
+/* seccion audio */
+
+.link-audio {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: medium;
+  margin: 20px;
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px;
+  text-shadow: #2B2B2B 0px 0px 2px;
+  
+}
+.link-audio a {
+  text-decoration: none;
+  color: #F8F8F8;
+  font-size: 20px;
+  font-weight: bolder;
+  text-shadow: #2B2B2B 0px 0px 2px;
+background-color: #615C56;
+border-radius: 5px;
+}
+
+.audio-discos {
   text-align: center;
   margin-top: 10px;
   padding: 4px;
 }
 
-.img-discos img {
+.audio-discos img {
   width: 50%;
   border-radius: 5px;
   margin-bottom: 10px;
 }
 
 /* link a audio */
-.img-discos p {
+.audio-discos p {
   font-size: 14px;
   margin: 5px;
   background-color: #2B2B2B;
@@ -380,13 +457,32 @@ div h3 {
   border-radius: 5px;
 }
 
-.img-discos a {
+.audio-discos a {
   text-decoration: none;
   color: #F8F8F8;
 }
 
 /*  testimonios  */
-main a {
+
+#ir-a-mensajes {
+  text-decoration: none;
+  color: #2B2B2B;
+  background-color: #F0EFEB;
+  font-size: large;
+  border: 6px solid #F0EFEB;
+  border-radius: 5px;
+  
+}
+
+.testimonios {
+  display: flex;
+  margin: 30px;
+  padding: 30px;
+}
+
+.testimonios a {
+  padding: 10px;
+  margin-top: 10px;
   text-decoration: none;
   font-size: 14px;
   background-color: #2B2B2B;
@@ -395,9 +491,6 @@ main a {
   color: #F8F8F8;
 }
 
-.testimonios {
-  margin: 30px;
-}
 
 article {
   padding: 15px;
@@ -411,6 +504,11 @@ article {
 
 }
 
+#mensajes {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
 /*  inscripcion */
 #bases {
   margin: 25px auto;
@@ -420,6 +518,9 @@ article {
 
 /* formulario */
 form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   text-align: center;
   margin: 20px;
   padding: 20px;
@@ -430,7 +531,7 @@ form {
 
 .label {
   font-family: "Cormorant Garamond", serif;
-  font-weight: bold;
+  font-weight: bolder;
   font-size: 18px;
   text-shadow: #2B2B2B 0px 0px 2px;
 }
